data/derived/comb/progs/unify/prog7616.ml.out
Characters 64-68:
  let fixpoint (fr,b) = wwhile ((let n z = let xx = f in (xx, b = f(b))  in n),b);;
                                                                  ^^^^
Error: This expression has type int * bool
       but an expression was expected of type int
